--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,6 +2,7 @@
     display: flex;
     padding-inline: 100px;
     justify-content: space-between;
+    align-items: center; /* Ensure items are centered vertically */
     background-color: black;
     height: 12vh;
 }
@@ -68,15 +69,12 @@
 
 @media (max-width: 768px) {
     .nav {
-        flex-direction: column;
-        align-items: center;
         padding-inline: 20px;
     }
     .nav .logo {
         font-size: 18px;
     }
     .nav .nav_links ul {
-        flex-direction: column;
         gap: 10px;
     }
     .nav .nav_links a {
